--- a/src/components/Board/CardList/List.scss
+++ b/src/components/Board/CardList/List.scss
@@ -1,9 +1,7 @@
-.list {
-  height: fit-content;
+.list-wrapper {
   background-color: var(--bg-color_500);
   border-radius: 10px;
-  // height: 100%;
-  max-height: 100%;
+  height: fit-content;
 
   h3 {
     margin: 0;
@@ -11,15 +9,35 @@
     padding: 10px;
   }
 
-  .list-cards {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    // max-height: 100lvh;
-    // overflow-y: auto;
+  .list {
+    overflow-y: auto;
+    max-height: 60vh;
+
+    &.adding-card {
+      max-height: 65vh;
+    }
+
+    .cards {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+  }
+
+  textarea {
+    min-height: 50px;
+    margin: 6px 10px;
+  }
+
+  .edit-btns {
+    margin: 0 10px 10px 10px;
   }
 
   .add-card__btn {
+    margin-top: 10px;
     padding: 10px;
     color: #8fa5b2;
     border-radius: 0 0 10px 10px;
@@ -31,14 +49,5 @@
       background-color: #00d989;
       color: #222222;
     }
-  }
-
-  textarea {
-    min-height: 50px;
-    margin: 6px 10px;
-  }
-
-  .edit-btns {
-    margin: 0 10px 10px 10px;
   }
 }
