--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,5 +22,6 @@
   .search__wrapper {
     position: relative;
     width: 300px;
+    max-height: 100%;
   }
 }
