--- a/src/components/SearchResult/SearchResult.scss
+++ b/src/components/SearchResult/SearchResult.scss
@@ -8,6 +8,8 @@
   left: 50%;
   top: 20px;
   width: 100%;
+  max-height: 80vh;
+  overflow-y: auto;
   height: fit-content;
   list-style: none;
   padding: 10px 0;
